--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <header>Velazquez Pantaleon Jorge Saul</header><br>
   <p>Este es el portafolio de evidencias para la asignatura de programacion web y pruebas</p>
-  
+  <br>
+  <p>Aqui vamos a crear un portafolio para cada practica.</p>
 </body>
 </html>
