se diferenciaron los componentes del curriculum

--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="">
   <title>Document</title>
 </head>
 <body>
@@ -13,12 +14,14 @@
       </header>
     </div>
     <div class="container-body">
-      <section>
+      <section class = 'acercaDeMi'>
         <h2>Seccion y hablar de ustedes</h2>
       </section>
       <article>
         <h2>SIrve principalment eapra colocar un parrafo en columnas, tambien como banner de publicacion</h2>
       </article>
+      
+      
       <aside>
         <h2>Esta etiqueta por lo regular sirve para publicidad, anuncios, adds</h2>
       </aside>
