--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -14,13 +14,14 @@
       </header>
     </div>
     <div class="container-body">
-      <section class = 'acercaDeMi'>
+      <div class = "contenido">
+        <section class = 'acercaDeMi'>
         <h2>Seccion y hablar de ustedes</h2>
       </section>
       <article>
         <h2>SIrve principalment eapra colocar un parrafo en columnas, tambien como banner de publicacion</h2>
       </article>
-      
+      </div>
       
       <aside>
         <h2>Esta etiqueta por lo regular sirve para publicidad, anuncios, adds</h2>
