--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -9,10 +9,18 @@
 <body>
   <div class = "container-main">
     <div class = "container-nav">
-      <header> 
+      <header>
         <nav>Menu</nav>
+        <div class ="banner">
+          <div class = "superior">
+            <div class= "banner-texto"><h2>Velázquez Pantaleón Jorge Saúl</h2></div>
+            <div class = "banner-imagen"></div>
+          </div>
+          <div class = "inferior"><img src="img/stamhappy.png" class = "steamhappy"></div>
+        </div>
       </header>
     </div>
+
     <div class="container-body">
       <div class = "contenido">
         <section class = 'acercaDeMi'>
@@ -22,11 +30,12 @@
         <h2>SIrve principalment eapra colocar un parrafo en columnas, tambien como banner de publicacion</h2>
       </article>
       </div>
-      
+
       <aside>
         <h2>Esta etiqueta por lo regular sirve para publicidad, anuncios, adds</h2>
       </aside>
     </div>
+
     <div class = "container-footer">
       <footer><h2>
         esta etiqueta sirve para el pie de pagina por lo regular puede haber micro sitios aviso de privacidad, redes sociales
