--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -23,7 +23,7 @@
 
     <div class="container-body">
       <div class = "contenido">
-        <section class = 'acercaDeMi'>
+      <section class = 'acercaDeMi'>
         <h2>Seccion y hablar de ustedes</h2>
       </section>
       <article>
@@ -32,7 +32,29 @@
       </div>
 
       <aside>
-        <h2>Esta etiqueta por lo regular sirve para publicidad, anuncios, adds</h2>
+        <h2>Contactame</h2>
+        <div class="contactame">  
+            <form class="formulario" action="#" method="post">
+              <label for="nombre">Nombre</label>
+              <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
+
+              <label for="correo">Correo electrónico</label>
+              <input type="email" id="correo" name="correo" placeholder="tu@email.com" required>
+
+              <label for="mensaje">Mensaje</label>
+              <textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje..." required></textarea>
+
+              <button type="submit">Enviar</button>
+          </form>
+        </div>
+        <div class="redes">
+          <h2>Mis redes</h2>
+          <div class = "redes-imagenes">
+            <div><img src="img/face.png"> <a href="https://www.facebook.com/groups/2336202166718249/">Facebook</a></div>
+            <div><img src="img/git.png"> <a href="https://github.com/jorgsaul"> GitHub</a></div>
+            <div><img src="img/linkedin.png"><a href="https://es.linkedin.com/showcase/elon-musk-newslines">LinkedIn</a></div>
+          </div>
+        </div>
       </aside>
     </div>
 
