se agrego el acerca de mi

--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -24,11 +24,25 @@
     <div class="container-body">
       <div class = "contenido">
       <section class = 'acercaDeMi'>
-        <h2>Seccion y hablar de ustedes</h2>
-      </section>
-      <article>
-        <h2>SIrve principalment eapra colocar un parrafo en columnas, tambien como banner de publicacion</h2>
-      </article>
+        <h2>Acerca de mi</h2>
+        <div class="acerca-texto">
+          <p>
+            Mi nombre es Jorg Saúl y actualmente estoy cursando la carrera técnica en Programación. Desde que comencé mi formación, he desarrollado un gran interés por el mundo de la tecnología, especialmente en áreas como el desarrollo web, la lógica de programación y la resolución de problemas a través del código. Considero que la programación no solo es una herramienta, sino también una forma de pensar y crear soluciones útiles para el día a día.
+          </p><br>
+          <p>
+            Me considero una persona adaptable, responsable y dedicada. Siempre estoy dispuesto a aprender, a escuchar y a mejorar. Me gusta involucrarme en proyectos que representen un reto y que al mismo tiempo me permitan adquirir nuevos conocimientos. Creo firmemente que cada línea de código es una oportunidad para crecer profesionalmente y como persona.
+          </p><br>
+          <p>
+            Lo que más me motiva es poder vivir de manera cómoda, estable y con propósito. Aspiro a tener una vida en la que pueda combinar el trabajo que disfruto con una buena calidad de vida. Para mí, el éxito profesional está directamente relacionado con la capacidad de aprender constantemente y adaptarse a nuevas herramientas, lenguajes y entornos.
+          </p><br>
+          <p>
+            Actualmente me encuentro explorando distintos lenguajes de programación y prácticas de desarrollo. Me gusta especialmente trabajar en proyectos que impliquen investigación, análisis y aprendizaje autodidacta. No importa si es algo pequeño o experimental; si me permite avanzar y poner en práctica lo que sé, ya es un buen proyecto.
+          </p><br>
+          <p>
+            A futuro me gustaría participar en equipos de trabajo donde pueda aportar mi enfoque comprometido y seguir aprendiendo de otros profesionales. Estoy convencido de que el trabajo en equipo, la comunicación y la actitud positiva son tan importantes como el conocimiento técnico. 
+          </p>
+        </div>
+      </section>   
       </div>
 
       <aside>
