Se agregaron la formacion academica, lenguajes e idiomas

--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -42,7 +42,36 @@
             A futuro me gustaría participar en equipos de trabajo donde pueda aportar mi enfoque comprometido y seguir aprendiendo de otros profesionales. Estoy convencido de que el trabajo en equipo, la comunicación y la actitud positiva son tan importantes como el conocimiento técnico. 
           </p>
         </div>
-      </section>   
+      </section>
+      <section class = "formacion">
+        <div class="academico">
+          <h2>Formacion academica</h2>
+          <br>
+          <p>Centro de Estudios Cientificos y Tecnologicos "Juan de Dios Batiz"</p>
+          
+        </div>
+        <div class="programacion">
+          <h2>Lenguajes de programacion</h2>
+          <ul>
+            <li>Javascript</li>
+            <li>Java</li>
+            <li>MySQL</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+        </div>
+        <div class ="idiomas">
+          <h2>Idiomas</h2>
+          <div class = "contenedor-barra">
+            <p>Español:Nativo</p>
+            <div class = "barra-1"></div>
+            <p>Ingles:Intermedio</p>
+            <div class = "barra-2"></div>
+            <p>Frances:Basico</p>
+            <div class = "barra-3"></div>
+          </div>
+        </div>
+      </section> 
       </div>
 
       <aside>
