Se agrego el footer

--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -48,7 +48,6 @@
           <h2>Formacion academica</h2>
           <br>
           <p>Centro de Estudios Cientificos y Tecnologicos "Juan de Dios Batiz"</p>
-          
         </div>
         <div class="programacion">
           <h2>Lenguajes de programacion</h2>
@@ -102,9 +101,17 @@
     </div>
 
     <div class = "container-footer">
-      <footer><h2>
-        esta etiqueta sirve para el pie de pagina por lo regular puede haber micro sitios aviso de privacidad, redes sociales
-      </h2></footer>
+      <footer>
+        <div class = "contendor-contenido">
+          <div><img src="./img/logo.webp" class = "footer-logo"></div>
+          <div class = "imagenes-extra"><img src="./img/twitter-gris.png"><img src="./img/face-gris.png"><img src="./img/Instagram-gris.webp"></div>
+          <div class = "texto-footer">
+            <p>2025 Velazquez Pantaleon Jorge Saul. Casi todos los derechos reservados</p>
+            <a href="">Politica de privacidad</a><br>
+            <a href="">Terminos y condiciones</a>
+          </div>
+        </div>
+      </footer>
     </div>
   </div>
 </body>
