--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <p>Este es el portafolio de evidencias para la asignatura de programacion web y pruebas</p>
   <br>
   <p>Aqui vamos a crear un portafolio para cada practica.</p>
+  <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
 </body>
 </html>
