--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <p>
+    cosas para tu ezmane parte 1
+    Queremeos que tu portafolio sea hermoso y 100% personalizado, se admite todo todo
+    Deberan de aplicar las reglas de acuerdo a material designer
+    Primero paleta de colores
+    Tipografia / Fuente
+    Iconografia
+    Imagenes
+  </p>
   <header>Velazquez Pantaleon Jorge Saul</header><br>
   <p>Este es el portafolio de evidencias para la asignatura de programacion web y pruebas</p>
   <br>
