regreso al portafolio

--- a/01Curriculo/curriculum.html
+++ b/01Curriculo/curriculum.html
@@ -10,7 +10,7 @@
   <div class = "container-main">
     <div class = "container-nav">
       <header>
-        <nav>Menu</nav>
+        <nav><a href="../index.html">Menu</a></nav>
         <div class ="banner">
           <div class = "superior">
             <div class= "banner-texto"><h2>Velázquez Pantaleón Jorge Saúl</h2></div>
