--- a/03Login/inicio.html
+++ b/03Login/inicio.html
@@ -32,7 +32,7 @@
       </button>
     </div>
 
-    <a href="">Regresar la menu principal</a>
+    <a href="../index.html">Regresar la menu principal</a>
   </div>
 </body>
 </html>
