--- a/03Login/inicio.html
+++ b/03Login/inicio.html
@@ -9,7 +9,7 @@
 <body>
   <div class = "user-login">
     <div class = "title">
-      <h1>Bienvenido a esta </h1>
+      <h1>Bienvenido a esta pagina super kawaii</h1>
     </div>
   
     <div class="userid">
@@ -20,7 +20,9 @@
       <h2>Ingrese la contraseña</h2>
       <input type="password" id="password">
     </div>
+
     <a href="#">Recuperar contraseña</a>
+    
     <div class="button">
       <button>
         <img src="./image/facebook.png" alt="404">
