Se agregaron las actividades

--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ejemplo de manejador de versiones</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <p>
-    cosas para tu ezmane parte 1
-    Queremeos que tu portafolio sea hermoso y 100% personalizado, se admite todo todo
-    Deberan de aplicar las reglas de acuerdo a material designer
-    Primero paleta de colores
-    Tipografia / Fuente
-    Iconografia
-    Imagenes
-  </p>
-  <header>Velazquez Pantaleon Jorge Saul</header><br>
-  <p>Este es el portafolio de evidencias para la asignatura de programacion web y pruebas</p>
-  <br>
-  <p>Aqui vamos a crear un portafolio para cada practica.</p>
-  <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ejemplo de manejador de versiones</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header>Velazquez Pantaleon Jorge Saul</header>
+    <br />
+    <p>
+      Este es el portafolio de evidencias para la asignatura de programacion web
+      y pruebas
+    </p>
+    <br />
+    <p>Aqui vamos a crear un portafolio para cada practica.</p>
+    <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
+    <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
+    <a href="./03Login/inicio.html">Practica 03 Login</a>
+  </body>
 </html>
