Diseño de los links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     </p>
     <br />
     <p>Aqui vamos a crear un portafolio para cada practica.</p>
-    <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
-    <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
-    <a href="./03Login/inicio.html">Practica 03 Login</a>
+    <div class="links">
+      <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
+      <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
+      <a href="./03Login/inicio.html">Practica 03 Login</a>
+    </div>
+    
   </body>
 </html>
