--- a/index.html
+++ b/index.html
@@ -7,19 +7,14 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>Velazquez Pantaleon Jorge Saul</header>
-    <br />
-    <p>
-      Este es el portafolio de evidencias para la asignatura de programacion web
-      y pruebas
-    </p>
-    <br />
-    <p>Aqui vamos a crear un portafolio para cada practica.</p>
-    <div class="links">
-      <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
-      <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
-      <a href="./03Login/inicio.html">Practica 03 Login</a>
+    <div>
+      <header><h1>Portafolio</h1></header>
+      <p>Velazquez Pantaleon Jorge Saul</p>
+      <div class="links">
+        <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
+        <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
+        <a href="./03Login/inicio.html">Practica 03 Login</a>
+      </div>
     </div>
-    
   </body>
 </html>
