--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div>
+    <div class = 'contenedor'>
       <header><h1>Portafolio</h1></header>
       <p>Velazquez Pantaleon Jorge Saul</p>
       <div class="links">
