Adicion del menu en html

--- a/02Primerospasos/estructura.html
+++ b/02Primerospasos/estructura.html
@@ -10,7 +10,7 @@
   <div clss = "container-main">
     <div class = "container-header">
       <header>
-        <nav><h1>Aqui va un menu</h1></nav>
+        <nav><h1>Aqui va un <a href="../index.html">Menu</a></h1></nav>
       </header>
     </div>
     <div class = "container-body">
