agregado de la practica 4

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
         <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
         <a href="./03Login/inicio.html">Practica 03 Login</a>
+        <a href="./04Formulario/formulario.html"></a>
       </div>
     </div>
   </body>
