agregado reglas del diseño

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <a href="./01Curriculo/curriculum.html">Practica 01 Curriculum</a>
         <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
         <a href="./03Login/inicio.html">Practica 03 Login</a>
-        <a href="./04Formulario/formulario.html"></a>
+        <a href="./04Formulario/formulario.html">Practica 4 Formulario</a>
+        <a href="https://www.figma.com/design/gzfkghW0jTRxs9KoktjQxT/Sin-t%C3%ADtulo?node-id=0-1&t=gOWJWs2QiGphdtzy-1">Reglas de los diseños</a>
       </div>
     </div>
   </body>
