--- a/04Formulario/formulario.html
+++ b/04Formulario/formulario.html
@@ -26,15 +26,17 @@
 
   <div class="container-form">
     <form method="get" id="formulario" name="formulario" onsubmit="return validar(this)" action="">
-      <label for="">Nombre: </label>
-      <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre">
-      <label for="">Edad: </label>
-      <input type="number" id="edad" name="edad" placeholder="Ingresa tu edad">
-      <label for="">Email: </label>
-      <input type="email" id="correo" name="correo" placeholder="Ingresa tu correo">
-      <input type="submit" name="enviar" value="Enviar Registro">
-      <input type="reset" name="borrar" value="Borrar Datos">
+      <label for="">Nombre: </label><br>
+      <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre"><br>
+      <label for="">Edad: </label><br>
+      <input type="number" id="edad" name="edad" placeholder="Ingresa tu edad"><br>
+      <label for="">Email: </label><br>
+      <input type="email" id="correo" name="correo" placeholder="Ingresa tu correo"><br>
+      <input type="submit" name="enviar" value="Enviar Registro"><br>
+      <input type="reset" name="borrar" value="Borrar Datos"><br>
     </form>
   </div>
+
+  <a href="../index.html">Volver al portafolio</a>
 </body>
 </html>
