adaptaciones al ejercicio

--- a/05Ejercicio/ejercicio1.html
+++ b/05Ejercicio/ejercicio1.html
@@ -28,6 +28,14 @@
         </tr>
         <tr>
           <td>
+            Cantidad de meses:
+          </td>
+          <td>
+            <input type="text" name="meses" id="meses" class="input_text" onkeypress="return validarn(event)">
+          </td>
+        </tr>
+        <tr>
+          <td>
             Su saldo total con el interes es de:
           </td>
           <td>
