--- a/05Ejercicio/ejercicio2.html
+++ b/05Ejercicio/ejercicio2.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Ejercicio 2</title>
+  <link rel="stylesheet" href="./css/ejercicio2.css">
 </head>
 <body>
-  <h2>Calculo de sueldo con comisiones</h2>
-  <form action="">
-    <div>
-      <label for="">Ingrese su sueldo base por mes</label><input type="text" placeholder="Sueldo Base" class="input_text">
-    </div>
-    <div>
-      <label for="">Ingrese las ventas realizadas en el mes</label><input type="text" placeholder="Ventas realizadas" class="input_text">
-    </div>
-    <div>
-      <input type="button" value="Calcular Sueldo"><input type="button" value="Borrar Datos">
-    </div>
-    <div>
-      <label for="">Sueldo total:</label><input type="text" readonly="readonly" class="input_text">
-    </div>
-
-  </form>
+  <div class="contendor-formulario">
+    <h2>Calculo de sueldo con comisiones</h2>
+    <form action="">
+      <div>
+        <label for="">Ingrese su sueldo base por mes</label><input type="text" placeholder="Sueldo Base" class="input_text">
+      </div>
+      <div>
+        <label for="">Ingrese las ventas realizadas en el mes</label><input type="text" placeholder="Ventas realizadas" class="input_text">
+      </div>
+      <div>
+        <input type="button" value="Calcular Sueldo" class="boton"><input type="button" value="Borrar Datos" class="boton">
+      </div>
+      <div>
+        <label for="">Sueldo total:</label><input type="text" readonly="readonly" class="input_text" style="background-color: none; border: none;">
+      </div>
+    </form>
+  </div>
 </body>
 </html>
