--- a/05Ejercicio/ejercicio3.html
+++ b/05Ejercicio/ejercicio3.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejercicio 3</title>
+  <link rel="stylesheet" href="./css/ejercicio2.css">
 </head>
 <body>
   <div class="contendor-formulario">
