Logica del ejercicio 4

--- a/05Ejercicio/ejercicio4.html
+++ b/05Ejercicio/ejercicio4.html
@@ -28,14 +28,14 @@
 
 
       <div>
-        <input type="button" value="Calcular Calificacion" class="boton" onclick="oferta()"><input type="button" value="Borrar Datos" class="boton" onclick="borrarCampos()">
+        <input type="button" value="Calcular Calificacion" class="boton" onclick="calificacion()"><input type="button" value="Borrar Datos" class="boton" onclick="borrarCampos()">
       </div>
       <div>
-        <label for="">Calificacion final:</label><input type="text" readonly="readonly" class="input_text" style="background-color: none; border: none;" id="compraFinal">
+        <label for="">Calificacion final:</label><input type="text" readonly="readonly" class="input_text" style="background-color: none; border: none;" id="calificacionFinal">
       </div>
     </form>
   </div>
 
-  <script src="./js/funciones3.js"></script>
+  <script src="./js/funciones4.js"></script>
 </body>
 </html>
