--- a/06Algoritmia/Algoritmia.html
+++ b/06Algoritmia/Algoritmia.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejemplo de uso de algoritmia</title>
+  <script src="./js/algrotimia.js"></script>
 </head>
 <body>
   <div class="contenedor">
@@ -12,7 +13,7 @@
       <h3>Dada una lista de palabras separadas por un espacio invierte el orden de dichas palabras, las palabras pueden estar separadas unicamente por espacios</h3>
       <div class="problema-content">
         <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por un espacio" id="p1-input">
-        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Invertir palabras</button>
+        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema1()">Invertir palabras</button>
         <pre class="problema-output" id="p1-output">Esperando datos...</pre>
       </div>
     </div>
@@ -102,9 +103,9 @@
       Considera solamente el alfabeto de la a-z en mayuscula, las palabras ingresadas deberan estar separadas por una coma. No se aceptan espacios.
       </h3>
       <div class="problema-content">
-        <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por un espacio" id="p1-input">
-        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular Palabras</button>
-        <pre class="problema-output" id="p1-output">Esperando datos...</pre>
+        <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por un espacio" id="p3-input">
+        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema3()">Calcular Palabras</button>
+        <pre class="problema-output" id="p3-output">Esperando datos...</pre>
     </div>
   </div>
 </body>
