Agregado al protafolio actividad 5 y 6

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="./02Primerospasos/estructura.html">Practica 02 Primeros pasos</a>
         <a href="./03Login/inicio.html">Practica 03 Login</a>
         <a href="./04Formulario/formulario.html">Practica 4 Formulario</a>
+        <a href="./05Ejercicio/lista.html">Ejercicio 5 ejercicios js</a>
+        <a href="./06Algoritmia/Algoritmia.html">Ejercicio 6 Algoritmia</a>
         <a href="https://www.figma.com/design/gzfkghW0jTRxs9KoktjQxT/Sin-t%C3%ADtulo?node-id=0-1&t=gOWJWs2QiGphdtzy-1">Reglas de los diseños</a>
       </div>
     </div>
