Regreso a la lista de actividades

--- a/05Ejercicio/ejercicio3.html
+++ b/05Ejercicio/ejercicio3.html
@@ -20,6 +20,7 @@
         <label for="">A pagar:</label><input type="text" readonly="readonly" class="input_text" style="background-color: none; border: none;" id="compraFinal">
       </div>
     </form>
+    <a href="./lista.html">Regresar</a>
   </div>
 
   <script src="./js/funciones3.js"></script>
