--- a/05Ejercicio/ejercicio4.html
+++ b/05Ejercicio/ejercicio4.html
@@ -34,6 +34,7 @@
         <label for="">Calificacion final:</label><input type="text" readonly="readonly" class="input_text" style="background-color: none; border: none;" id="calificacionFinal">
       </div>
     </form>
+    <a href="./lista.html">Regresar</a>
   </div>
 
   <script src="./js/funciones4.js"></script>
