--- a/05Ejercicio/ejercicio5.html
+++ b/05Ejercicio/ejercicio5.html
@@ -31,6 +31,7 @@
         <input type="text" readonly class="input_text" id="porcentajeHombres" style="border: none;">
       </div>
     </form>
+    <a href="./lista.html">Regresar</a>
   </div>
 
   <script src="./js/funciones5.js"></script>
