--- a/05Ejercicio/ejercicio6.html
+++ b/05Ejercicio/ejercicio6.html
@@ -23,6 +23,7 @@
         <input type="text" readonly="readonly" class="input_text" id="edadCalculada" style="background-color: none; border: none;">
       </div>
     </form>
+    <a href="./lista.html">Regresar</a>
   </div>
 
   <script src="./js/funciones6.js"></script>
