--- a/05Ejercicio/ejercicio2.html
+++ b/05Ejercicio/ejercicio2.html
@@ -23,6 +23,7 @@
         <label for="">Sueldo total:</label><input type="text" readonly="readonly" class="input_text" style="background-color: none; border: none;" id="sueldoTotal">
       </div>
     </form>
+    <a href="./lista.html">Regresar</a>
   </div>
 
   <script src="./js/funciones2.js"></script>
