Diseño de algoritmia

--- a/06Algoritmia/Algoritmia.html
+++ b/06Algoritmia/Algoritmia.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejemplo de uso de algoritmia</title>
   <script src="./js/algrotimia.js"></script>
+  <link rel="stylesheet" href="./css/algortimia.css">
 </head>
 <body>
   <div class="contenedor">
