Regreso al portafolio

--- a/06Algoritmia/Algoritmia.html
+++ b/06Algoritmia/Algoritmia.html
@@ -108,6 +108,7 @@
         <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema3()">Calcular Palabras</button>
         <pre class="problema-output" id="p3-output">Esperando datos...</pre>
     </div>
+    <a href="../index.html">Regresar al portafolio</a>
   </div>
 </body>
 </html>
