Logica de lejercicio 1 y 2 de la actividad 07

--- a/07JSIntermedio/formulario.html
+++ b/07JSIntermedio/formulario.html
@@ -12,9 +12,9 @@
       <h2 class="problema-title">Problema 1</h2>
       <h3>Dado dos numeros realizar funciones segun su valor</h3>
       <div class="problema-content">
-        <input type="number" class="problema-input" placeholder="Numero 1" id="p1-input">
-        <input type="number" class="problema-input" placeholder="Numero 2" id="p1-input">
-        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Realizar calculo</button>
+        <input type="number" class="problema-input" placeholder="Numero 1" id="numero1-input">
+        <input type="number" class="problema-input" placeholder="Numero 2" id="numero2-input">
+        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="funcionNumeros()">Realizar calculo</button>
         <pre class="problema-output" id="p1-output">Esperando datos...</pre>
       </div>
     </div>
@@ -26,10 +26,11 @@
       <h3>Cantidad de dinero que recibe por horas extra</h3>
       <div class="problema-content">
         <input type="number" class="problema-input" placeholder="Horas trabajadas" id="p1-input">
-        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Realizar calculo</button>
-        <pre class="problema-output" id="p1-output">Esperando datos...</pre>
+        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="funcionHoras()">Realizar calculo</button>
+        <pre class="problema-output" id="p2-output">Esperando datos...</pre>
       </div>
     </div>
   </div>
+  <script src="./js/funcionesintermedio.js"></script>
 </body>
 </html>
