estructura del ejercicio 3 actividad 7

--- a/07JSIntermedio/formulario.html
+++ b/07JSIntermedio/formulario.html
@@ -31,6 +31,18 @@
       </div>
     </div>
   </div>
+
+  <div class="contenedor">
+    <div class="problema-contenedor">
+      <h2 class="problema-title">Problema 3</h2>
+      <h3>Utilidad del trabajador anualmente</h3>
+      <div class="problema-content">
+        <input type="number" class="problema-input" placeholder="Cantidad de años" id="p3-input">
+        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Realizar calculo</button>
+        <pre class="problema-output" id="p2-output">Esperando datos...</pre>
+      </div>
+    </div>
+  </div>
   <script src="./js/funcionesintermedio.js"></script>
 </body>
 </html>
