--- a/07JSIntermedio/formulario.html
+++ b/07JSIntermedio/formulario.html
@@ -38,8 +38,8 @@
       <h3>Utilidad del trabajador anualmente</h3>
       <div class="problema-content">
         <input type="number" class="problema-input" placeholder="Cantidad de años" id="p3-input">
-        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Realizar calculo</button>
-        <pre class="problema-output" id="p2-output">Esperando datos...</pre>
+        <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="utilidadTrabajador()">Realizar calculo</button>
+        <pre class="problema-output" id="p3-output">Esperando datos...</pre>
       </div>
     </div>
   </div>
