Agregado de actividades 7 y 8 al portafolio

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="./04Formulario/formulario.html">Practica 4 Formulario</a>
         <a href="./05Ejercicio/lista.html">Ejercicio 5 ejercicios js</a>
         <a href="./06Algoritmia/Algoritmia.html">Ejercicio 6 Algoritmia</a>
+        <a href="./07JSIntermedio/formulario.html" >Ejercicio 7 Javascript Intermedio</a>
+        <a href="./08Rompecabezas/rompecabezas.html">Ejecicio 8 Rompecabezas</a>
         <a href="https://www.figma.com/design/gzfkghW0jTRxs9KoktjQxT/Sin-t%C3%ADtulo?node-id=0-1&t=gOWJWs2QiGphdtzy-1">Reglas de los diseños</a>
       </div>
     </div>
