--- a/07JSIntermedio/formulario.html
+++ b/07JSIntermedio/formulario.html
@@ -42,6 +42,7 @@
         <pre class="problema-output" id="p3-output">Esperando datos...</pre>
       </div>
     </div>
+    <a href="../index.html">Regresar</a>
   </div>
   <script src="./js/funcionesintermedio.js"></script>
 </body>
