--- a/08Rompecabezas/rompecabezas.html
+++ b/08Rompecabezas/rompecabezas.html
@@ -10,7 +10,7 @@
   <div class="col-40">
     <div id="titulo">
       <h1>Rompecabezas</h1>
-      <div id="iniciarButton" onclick="">
+      <div id="iniciarButton" onclick="mezclasPiezas(30)">
         Mezclar de nuevo las Piezas
       </div>
       <div id="instrucciones">
@@ -61,10 +61,8 @@
       <div id="pieza8" class="piezas">
         <img src="./images/80.jpg" alt="No se encuentra el recurso">
       </div>
-      <div>
-        <div id="pieza9" class="piezas">
+      <div id="pieza9" class="piezas">
 
-        </div>
       </div>
     </div>
   </div>
