Correccion de links

--- a/08Rompecabezas/rompecabezas.html
+++ b/08Rompecabezas/rompecabezas.html
@@ -30,7 +30,7 @@
       <div id="ultimo-movimiento">
         <h2>Último movimiento</h2>
         <div id="flecha" class="texto-centrado"></div>
-
+        <a href="./lista-rompecabeza.html">Regresar a la lista</a>
       </div>
     </div>
   </div>
