Correcciones y terminacion de la api

--- a/11APIFetch/api.html
+++ b/11APIFetch/api.html
@@ -12,13 +12,13 @@
     <div class="d-flex center-flex">
       <input type="text" id="pokemonName" class="lcd-input" placeholder="Ingresa el nombre del pokemon">
       <input type="hidden" id="pokemonId" value="0">
-      <button id="btnSeach" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+      <button id="btnSearch" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
       <div class="columns-elements">
         <button class="btn" id="btnUp"><i class="fa-solid fa-caret-up"></i></button>
         <button class="btn" id="btnDown"><i class="fa-solid fa-caret-down"></i></button>
       </div>
     </div>
-    <div id="poledisplay-container" class="d-flex center-flex pokedisplay-container">
+    <div id="pokedisplay-container" class="d-flex center-flex pokedisplay-container">
       <img class="pokedisplay" src="./img/pokeball.png" alt="Pokedisplay">
     </div>
   </section>
@@ -66,5 +66,6 @@
       </div>
     </div>
   </section>
+  <script src="./js/fetch.js"></script>
 </body>
 </html>
