--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -9,12 +9,12 @@
   <h1>🌱 PlantDex</h1>
 
   <div class="busqueda">
-    <input id="busqueda" placeholder="Buscar planta...">
+    <input id="busqueda" placeholder="Ingresa un nombre.">
     <button id="buscarBtn">Buscar</button>
   </div>
 
   <div id="contenedor" class="card">
-    <p>Selecciona una planta para ver sus stats</p>
+    <p>Selecciona un objeto para ver sus stats</p>
   </div>
 
   <div class="navegacion">
