--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -10,7 +10,7 @@
 
   <div class="busqueda">
     <input id="busqueda" placeholder="Ingresa un nombre.">
-    <button id="buscarBtn">Buscar</button>
+    <button id="buscarBtn" onclick="obtenerPersonaje()">Buscar</button>
   </div>
 
   <div id="contenedor" class="card">
@@ -22,6 +22,6 @@
     <button id="nextBtn">Siguiente ➡️</button>
   </div>
 
-  <script src="index.js"></script>
+  <script src="./js/fetch.js"></script>
 </body>
 </html>
