--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>PlantDex 🌱</title>
+  <title>PvZ 🌱</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <h1>🌱 PlantDex</h1>
+  <h1>Plants vs Zombies API</h1>
 
   <div class="busqueda">
     <input id="busqueda" placeholder="Ingresa un nombre.">
@@ -15,11 +15,6 @@
 
   <div id="contenedor" class="card">
     <p>Selecciona un objeto para ver sus stats</p>
-  </div>
-
-  <div class="navegacion">
-    <button id="prevBtn">⬅️ Anterior</button>
-    <button id="nextBtn">Siguiente ➡️</button>
   </div>
 
   <script src="./js/fetch.js"></script>
