Agregado cargando y not found

--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -14,7 +14,7 @@
   </div>
 
   <div id="contenedor" class="card">
-    <p>Selecciona un objeto para ver sus stats</p>
+    <p>Ingresa el nombre de un personaje para ver sus propiedades</p>
   </div>
 
   <script src="./js/fetch.js"></script>
