--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -16,7 +16,9 @@
   <div id="contenedor" class="card">
     <p>Ingresa el nombre de un personaje para ver sus propiedades</p>
   </div>
-  <a href="https://pvz-2-api.vercel.app/#about">API de referencia</a>
+  
+  <a href="https://pvz-2-api.vercel.app/#about">API de referencia | </a>
+  <a href="../index.html">Regresar</a>
   <script src="./js/fetch.js"></script>
 </body>
 </html>
