--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -17,6 +17,15 @@
     <p>Ingresa el nombre de un personaje para ver sus propiedades</p>
   </div>
   
+  <div class="card">
+    <p>Sugerencias:</p>
+    <ul>
+      <p>conehead Zombie</li>
+      <p>imp pear imp</p>
+      <p>aloe</p>
+      <p>poncho zombie</p>
+    </ul>
+  </div>
   <a href="https://pvz-2-api.vercel.app/#about">API de referencia | </a>
   <a href="../index.html">Regresar</a>
   <script src="./js/fetch.js"></script>
