Añadido link para que funciona correctamente la api

--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -22,7 +22,7 @@
         <input type="text" readonly="readonly"style="background-color: transparent; border: none; color: #fff; text-align: center; width: 20rem;" class="input_text" id="respuesta">
       </div>
       <div>
-        <a href="../index.html">Regresar</a> | <a href="https://www.eightballapi.com/">Api de referencia</a>
+        <a href="../index.html">Regresar</a> | <a href="https://www.eightballapi.com/">Api de referencia</a> | <a href="https://cors-anywhere.herokuapp.com/corsdemo">Activar el cors temporal</a>
       </div>
     </div>
   </div>
