--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Api de Examen</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-  <script src="./js/api.js"></script>
+  <title>PvZ 🌱</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div class="contenedor-principal">
-    <h1>Bola de la suerte</h1>
-    <div class="card">
-      <input type="text" id="pregunta" class="input_text" placeholder="Pregunta algo a la bola" autofocus autocomplete="off" maxlength="100">
-      <div class="contenedor-botones">
-         <input type="button" value="Enviar" class="boton" onclick="preguntar()"><input type="button" value="Borrar Datos" class="boton" onclick="borrarCampos()">
-      </div>
-      <div>
-        <input type="text" readonly="readonly"style="background-color: transparent; border: none; color: #fff; text-align: center; width: 20rem;" class="input_text" id="respuesta">
-      </div>
-      <div>
-        <a href="../index.html">Regresar</a> | <a href="https://www.eightballapi.com/">Api de referencia</a> | <a href="https://cors-anywhere.herokuapp.com/corsdemo">Activar el cors temporal</a>
-      </div>
-    </div>
+  <h1>Plants vs Zombies API</h1>
+
+  <div class="busqueda">
+    <input id="busqueda" placeholder="Ingresa un nombre.">
+    <button id="buscarBtn" onclick="obtenerPersonaje()">Buscar</button>
   </div>
+
+  <div id="contenedor" class="card">
+    <p>Ingresa el nombre de un personaje para ver sus propiedades</p>
+  </div>
+  
+  <div class="card">
+    <p>Sugerencias:</p>
+    <p>conehead Zombie</li>
+    <p>imp pear imp</p>
+    <p>aloe</p>
+    <p>poncho zombie</p>
+  </div>
+  <a href="https://pvz-2-api.vercel.app/#about">API de referencia | </a><a href="https://www.eightballapi.com/">Api de referencia</a> | <a href="https://cors-anywhere.herokuapp.com/corsdemo">Activar el cors temporal</a>
+  <a href="../index.html">Regresar</a>
+  <script src="./js/fetch.js"></script>
 </body>
 </html>
