cambio en las ligas

--- a/12Examen/api.html
+++ b/12Examen/api.html
@@ -24,8 +24,8 @@
     <p>aloe</p>
     <p>poncho zombie</p>
   </div>
-  <a href="https://pvz-2-api.vercel.app/#about">API de referencia | </a><a href="https://www.eightballapi.com/">Api de referencia</a> | <a href="https://cors-anywhere.herokuapp.com/corsdemo">Activar el cors temporal</a>
-  <a href="../index.html">Regresar</a>
+  <a href="https://pvz-2-api.vercel.app/#about">API de referencia | </a><a href="https://cors-anywhere.herokuapp.com/corsdemo">Activar el cors temporal</a>
+  <a href="../index.html">| Regresar</a>
   <script src="./js/fetch.js"></script>
 </body>
 </html>
