--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="./08Rompecabezas/lista-rompecabeza.html">Ejecicio 8 Rompecabezas</a>
         <a href="./11APIFetch/api.html">Ejercicio 11 Pokedex</a>
         <a href="./12Examen/api.html">Examen</a>
+        <a href="./13Ejercicio/imagenes.html">Ejercicio 13 Evidencias</a>
         <a href="https://www.figma.com/design/gzfkghW0jTRxs9KoktjQxT/Sin-t%C3%ADtulo?node-id=0-1&t=gOWJWs2QiGphdtzy-1">Reglas de los diseños</a>
       </div>
     </div>
